updated with afus project and ECAI

--- a/index.html
+++ b/index.html
@@ -157,16 +157,6 @@
 	 </div>
 	 <div class="container">
 	   <div class="row">
-		<div class="col-lg-3 col-md-6 text-center">
-		  <div class="service-box mt-5 mx-auto">
-		    <a class="js-scroll-trigger" href="#ponics">
-			 <h3>Modular Aquaponics</h3>
-		    </a>
-		    <p class="text-muted mb-0">A research project based upon creating an open source automated and modular food growth platform</p>
-		  </div>
-		</div>
-
-
 
 		<div class="col-lg-3 col-md-6 text-center">
 		  <div class="service-box mt-5 mx-auto">
@@ -187,6 +177,14 @@
 		  </div>
 		</div>
 
+		<div class="col-lg-3 col-md-6 text-center">
+		  <div class="service-box mt-5 mx-auto">
+		    <a class="js-scroll-trigger" href="#ponics">
+			 <h3>Modular Aquaponics</h3>
+		    </a>
+		    <p class="text-muted mb-0">A research project based upon creating an open source automated and modular food growth platform</p>
+		  </div>
+		</div>
 
 		<div class="col-lg-3 col-md-6 text-center">
 		  <div class="service-box mt-5 mx-auto">
@@ -194,6 +192,26 @@
 			 <h3>Submersible</h3>
 		    </a>
 		    <p class="text-muted mb-0">A research project with the goal of building a machine to retrieve a car from the bottom of a lake</p>
+		  </div>
+		</div>
+
+
+		<div class="col-lg-3 col-md-6 text-center">
+		  <div class="service-box mt-5 mx-auto">
+		    <a class="js-scroll-trigger" href="#multilat">
+			 <h3>Single Sensor Bluetooth Multilateration</h3>
+		    </a>
+		    <p class="text-muted mb-0">Research performed at Lawrence Livermore National Labratory on locating bluetooth devices.</p>
+		  </div>
+		</div>
+
+
+		<div class="col-lg-3 col-md-6 text-center">
+		  <div class="service-box mt-5 mx-auto">
+		    <a class="js-scroll-trigger" href="#afus">
+			 <h3>Senior Capstone:The AF&mu;S Project</h3>
+		    </a>
+		    <p class="text-muted mb-0">Autonomous Flocking micro Subs. </p>
 		  </div>
 		</div>
 
@@ -498,6 +516,78 @@
     </section>
 
 
+   <section id="multilat" class="bg-primary">
+	<div class="container">
+	  <div class="row">
+	    <div class="col-lg-8 mx-auto text-center">
+		 <h1 class="section-heading">Single Sensor Bluetooth Multilateration</h1>
+		 <h4>2018</h4>
+		 <hr class="my-4 light">
+	    </div>
+	    <div class="col-lg-8 mx-auto text-left">
+		 <p>During an internship at Lawrence Livermore National Labratory, I researched the feasibility of utilizing a single moving sensor to perform multilateration on bluetooth devices, and then map out their locations. Due to time and classification constraints, my investigation was less than thurough, and slightly rushed, but I condenced my findings into an IEEE formatted paper, which I presented at an IEEE conference, and will be published in ECAI 2019.</p>
+		 <p>Development of this system presented quite a few challenges relating to the junction between realtime data collection, and analysis of the data, as well as significant insight into location and positioning algorithms. As this particular project is owned by LLNL, I am not able to continue this particular line of research, but I look forward to applying what I learned to future projects.</p>
+		 <p>My paper <b><i>Single Sensor Bluetooth Multilateration from Arbitrary Locations</i></b> will be in IEEexplore when the journal is published, but the full paper is available <a href="https://drive.google.com/file/d/1C-zcsJpvFkraHPQeXP53dD0v4bU-3hvO/view?usp=sharing"
+			target="_blank">here</a>.</p>
+
+
+	    </div>
+	  </div>
+	</div>
+   </section>
+
+
+   <section id="afus">
+	<div class="container">
+	  <div class="row">
+	    <div class="col-lg-8 mx-auto text-center">
+		 <h1 class="section-heading">Senior Capstone:The AF&mu;S Project</h1>
+		 <h4>2019-present</h4>
+		 <hr class="my-4">
+	    </div>
+	    <div class="col-lg-8 mx-auto text-left">
+		 <p>As my senior capstone, I will be working on The AF&mu;S Project, which stands for <i>Autonomous Flocking micro Submersibles</i>. The aim of this is to design and build affordable, small submersibles that have the capability to work in a swarm. Currently there are several companies making small submersibles with these capabilities, but most of them are too expensive for indevidual or undergraduate level research. The final product should present a platform on which researchers can mount their own sensors and easily utilize for whatever data collection they need.</p>
+		 <p>Currently this project consists of a team of two computer engineering students, myself and <a href="http://www.jacobkaraul.com/" target="_blank">Jacob Karaul</a>, as well as two mechanical engineering students, Alex Pradhan and Sam Veith.</p>
+		 <p>Along with the technological challenges that will accompany this project, which will be documented here as they unfold, there is the challenge of organizing development across a multidiscipline team. To confront this, I researched methodologies often used by startups within similar fields, several of which have been implemented into our planning and ideation sessions, a gallery of which is included below.</p>
+
+		 <div class="service-box mt-5 mx-auto">
+		   <div class="container-fluid p-0">
+			<div class=" gallery-link">
+			  <a class="portfolio-box" href="#">
+				 <img class="img-fluid" src="img/large/afus/1.jpg" alt="">
+				 <div class="portfolio-box-caption">
+				   <div class="portfolio-box-caption-content">
+					<div class="project-category text-faded">
+					Ideation Session Gallery
+					</div>
+				   </div>
+				 </div>
+			    </a>
+			</div>
+			<div class="gallery">
+			  <a class="portfolio-box" href="img/large/afus/1.jpg" title=""></a>
+			  <a class="portfolio-box" href="img/large/afus/2.jpg" title=""></a>
+			  <a class="portfolio-box" href="img/large/afus/3.jpg" title=""></a>
+			  <a class="portfolio-box" href="img/large/afus/4.jpg" title=""></a>
+			  <a class="portfolio-box" href="img/large/afus/5.jpg" title=""></a>
+			  <a class="portfolio-box" href="img/large/afus/6.jpg" title=""></a>
+			  <a class="portfolio-box" href="img/large/afus/7.jpg" title=""></a>
+			  <a class="portfolio-box" href="img/large/afus/8.jpg" title=""></a>
+			</div>
+		   </div>
+		 </div>
+
+		 <hr>
+		<p>The first paper describing the project from the computer engineering side is linked <a href="https://drive.google.com/file/d/1C-zcsJpvFkraHPQeXP53dD0v4bU-3hvO/view?usp=sharing" target="_blank">here</a>.</p>
+
+	    </div>
+	  </div>
+	</div>
+
+
+   </section>
+
+<!-------------------------------------------------------------------------->
     <section id="small" class="bg-primary">
 	 <div class="container ">
 	   <div class="row">
